# OpenKhuzdulGraph

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindNuma.cmake
datasets/live_journal/: .gitignore  download.sh  standardize.cc
distributed_applications/: CMakeLists.txt
distributed_applications/kautomine/: CMakeLists.txt  five_clique.cc  four_clique.cc  three_fsm.cc  three_motif.cc  triangle.cc
distributed_applications/kgraphpi/: CMakeLists.txt  five_clique.cc  four_clique.cc  three_motif.cc  triangle.cc
include/: bitmap.h  distributed_application.h  distributed_sys.h  dwarves_debug.h  engine.h  graph.h  graph_loader.h  main_template.h  memory_pool.h  shared_memory_sys.h  timer.h  types.h  utilities.h  vertex_set.h
src/: distributed_application.cc  distributed_sys.cc  dwarves_debug.cc  engine.cc  memory_pool.cc  shared_memory_sys.cc  timer.cc  utilities.cc  vertex_set.cc
toolkits/: CMakeLists.txt  analyze_trace.cc  check_graph.cc  converter.cc  degree_analysis.cc  export_graph.cc  locality_aware_reordering.cc  to_arabesque_dataset_converter.cc  to_biedgelist_converter.cc  to_oriented_dataset_converter.cc  to_shuffled_biedgelist_converter.cc
